# dopamine-detox

./: .gitignore  README.md
.github/workflows/: ci.yml.example
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/data/checkins/: alcohol.json  custom.json  diet.json  smoking.json
backend/app/data/timelines/: alcohol.json  custom.json  diet.json  smoking.json
backend/app/mappers/: timeline_mapper.py
backend/app/routers/: abstinence.py  auth.py  dashboard.py
backend/app/services/: abstinence_service.py  auth_service.py  checkin_service.py  gemini_utils.py  timeline_service.py
backend/tests/: conftest.py  test_schemas.py
backend/tests/routers/: test_abstinence.py  test_auth.py  test_dashboard.py
backend/tests/services/: test_auth_service.py  test_checkin_service.py  test_timeline_service.py
docs/: ROADMAP.md  gpt-health-convo.md  phase-1-auth.md  phase-2-core.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vercel.json
frontend/e2e/: abstinence-creation.spec.ts  auth.spec.ts  checkin.spec.ts  timeline-view.spec.ts
frontend/src/: App.tsx
frontend/src/api/: abstinence.ts  auth.ts  checkin.ts  client.ts  dashboard.ts
frontend/src/components/: GuestRoute.test.tsx  GuestRoute.tsx  Layout.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  TabBar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CheckinPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  LandingPage.tsx  (+9 more)
mockups/: phase-1-auth.html  phase-2-core.html
(+28 files in other folders)
